[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-location-ner"
version = "0.1.0"
description = "Indonesian location extractor (gazetteer + optional NER)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gavinda Kinandana" }]
dependencies = [
  "spacy>=3.7,<4",
  "rapidfuzz>=3.6,<4",
]

[project.urls]
Homepage = "https://github.com/vinbyte/id-location-ner"
Repository = "https://github.com/vinbyte/id-location-ner"
Issues = "https://github.com/vinbyte/id-location-ner/issues"

[project.optional-dependencies]
hf = [
  "transformers>=4.36",
  "torch>=2.0",
]

[project.scripts]
# Keep the original CLI name for convenience.
location-ner = "location_ner.cli:cli"
# Also expose a repo-aligned CLI name.
id-location-ner = "location_ner.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
